--- a/index.html
+++ b/index.html
@@ -1,24 +1,64 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>İtiraf0.18</title>
   <style>
     body {
       margin: 0;
       padding: 0;
-      background-color: #111; /* Koyu tema */
+      background-color: #111;
       color: #fff;
       font-family: 'Arial', sans-serif;
+      height: 100vh;
       display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    #loader {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+    }
+
+    .dot {
+      width: 10px;
+      height: 10px;
+      margin: 5px;
+      background-color: white;
+      border-radius: 50%;
+      animation: bounce 1.2s infinite ease-in-out;
+    }
+
+    .dot:nth-child(2) {
+      animation-delay: 0.2s;
+    }
+
+    .dot:nth-child(3) {
+      animation-delay: 0.4s;
+    }
+
+    @keyframes bounce {
+      0%, 80%, 100% {
+        transform: scale(0);
+      }
+      40% {
+        transform: scale(1);
+      }
+    }
+
+    #mainContent {
+      display: none;
       flex-direction: column;
       align-items: center;
       justify-content: flex-start;
-      height: 100vh;
+      width: 100%;
     }
 
-    h1 {
+    #mainContent h1 {
       margin-top: 80px;
       font-size: 28px;
       font-weight: bold;
@@ -27,6 +67,26 @@
   </style>
 </head>
 <body>
-  <h1>İtiraf0.18</h1>
+
+  <!-- Yükleme Ekranı -->
+  <div id="loader">
+    <div class="dot"></div>
+    <div class="dot"></div>
+    <div class="dot"></div>
+  </div>
+
+  <!-- Ana İçerik -->
+  <div id="mainContent">
+    <h1>İtiraf0.18</h1>
+  </div>
+
+  <script>
+    // Yükleme ekranını 2 saniye sonra gizle
+    setTimeout(() => {
+      document.getElementById("loader").style.display = "none";
+      document.getElementById("mainContent").style.display = "flex";
+    }, 2000);
+  </script>
+
 </body>
 </html>
