--- a/index.html
+++ b/index.html
@@ -62,3 +62,12 @@
   <script src="js/script.js"></script>
 </body>
 </html>
+
+<section id="home">
+  <h1>İtiraf0.18</h1>
+  <div class="about">
+    <h2>Hakkımızda</h2>
+    <p>Merhaba ben itiraf0.18'in admini. Bu siteyi iki kişi kurduk ama sayfayı sadece ben yönetiyorum. Burada paylaşılan her şey gizli kalacaktır.</p>
+  </div>
+</section>
+
