--- a/itiraf.html
+++ b/itiraf.html
@@ -1,8 +1,22 @@
-<section class="itiraf-form">
-  <h2>Anonim İtiraf Gönder</h2>
-  <form id="itirafForm">
-    <textarea id="itirafText" placeholder="İtirafını buraya yaz..." required></textarea>
-    <button type="submit">Gönder</button>
-  </form>
-  <p id="formStatus"></p>
-</section>
+<!DOCTYPE html>
+<html lang="tr">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>İtiraf Gönder - Çankırı İtiraf</title>
+  <link rel="stylesheet" href="style/itiraf-form.css" />
+</head>
+<body>
+
+  <section class="itiraf-form">
+    <h2>Anonim İtiraf Gönder</h2>
+    <form id="itirafForm">
+      <textarea id="itirafText" placeholder="İtirafını buraya yaz..." required></textarea>
+      <button type="submit">Gönder</button>
+    </form>
+    <p id="formStatus"></p>
+  </section>
+
+  <script src="js/itiraf-form.js"></script>
+</body>
+</html>
