--- a/itiraf.html
+++ b/itiraf.html
@@ -20,3 +20,5 @@
   <script src="js/itiraf-form.js"></script>
 </body>
 </html>
+
+<a href="itiraf-gonder.html" class="itiraf-btn">İtiraf Gönder</a>
