--- a/etkinlik.html
+++ b/etkinlik.html
@@ -27,8 +27,11 @@
       <p>Buraya canlı etkinliklerle ilgili içerik gelecek.</p>
     </section>
   </main>
+<body class="dark-mode">
+  <!-- sayfa içeriği -->
+</body>
 
 </body>
 </html>
-<button id="themeToggle">🌙 / ☀️</button>
+
 
