--- a/itiraf.html
+++ b/itiraf.html
@@ -22,4 +22,7 @@
 </html>
 
 <a href="itiraf-gonder.html" class="itiraf-btn">İtiraf Gönder</a>
-<button id="themeToggle">🌙 / ☀️</button>
+<body class="dark-mode">
+  <!-- sayfa içeriği -->
+</body>
+
