--- a/itiraf.html
+++ b/itiraf.html
@@ -26,3 +26,7 @@
   <!-- sayfa içeriği -->
 </body>
 
+<form action="https://ngl.link/itiraf-gonder" method="GET" target="_blank">
+  <input type="text" name="message" placeholder="İtirafını yaz..." />
+  <button type="submit">Gönder</button>
+</form>
