--- a/itiraf.html
+++ b/itiraf.html
@@ -24,7 +24,7 @@
 <a href="itiraf-gonder.html" class="itiraf-btn">İtiraf Gönder</a>
 
 
-<form action="https://ngl.link/itiraf-gonder" method="GET" target="_blank">
+<form action="https://ngl.link/itiraf.018" method="GET" target="_blank">
   <input type="text" name="message" placeholder="İtirafını yaz..." />
   <button type="submit">Gönder</button>
 </form>
