--- a/itiraf.html
+++ b/itiraf.html
@@ -3,16 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>İtiraf Gönder - Çankırı İtiraf</title>
   <link rel="stylesheet" href="style/itiraf-form.css" />
 </head>
 <body>
 
   <section class="itiraf-form">
-    <h2>Anonim İtiraf Gönder</h2>
+    <h2>Anonim İtiraf Göndermek için TIKLA </h2>
     <form id="itirafForm">
       <textarea id="itirafText" placeholder="İtirafını buraya yaz..." required></textarea>
-      <button type="submit">Gönder</button>
     </form>
     <p id="formStatus"></p>
   </section>
@@ -23,10 +21,8 @@
 
 <a href="itiraf-gonder.html" class="itiraf-btn">İtiraf Gönder</a>
 
-
 <form action="https://ngl.link/itiraf.018" method="GET" target="_blank">
   <input type="text" name="message" placeholder="İtirafını yaz..." />
-  <button type="submit">Gönder</button>
 </form>
 <body class="dark-mode">
   <!-- sayfa içeriği -->
