--- a/itiraf.html
+++ b/itiraf.html
@@ -24,6 +24,7 @@
 <form action="https://ngl.link/itiraf.018" method="GET" target="_blank">
   <input type="text" name="message" placeholder="İtirafını yaz..." />
 </form>
+<button type="submit">Gönder</button>
 <body class="dark-mode">
   <!-- sayfa içeriği -->
 </body>
