--- a/index.html
+++ b/index.html
@@ -33,3 +33,5 @@
   <!-- sayfa içeriği -->
 </body>
 
+<a href="https://ngl.link/senin-linkin" target="_blank" class="itiraf-buton">İtiraf Gönder</a>
+
