--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     <a href="index.html"><span class="material-icons icon">home</span>Home</a>
     <a href="etkinlik.html"><span class="material-icons icon">event</span>Etkinlik</a>
     <a href="videolar.html"><span class="material-icons icon">videocam</span>Videolar</a>
-    <a href="itiraf.html"><span class="material-icons icon">favorite</span>İtiraf</a>
   </nav>
 
   <main>
@@ -33,5 +32,5 @@
   <!-- sayfa içeriği -->
 </body>
 
-<a href="https://ngl.link/senin-linkin" target="_blank" class="itiraf-buton">İtiraf Gönder</a>
+<a href="https://ngl.link/itiraf.018" target="_blank" class="itiraf-buton">İtiraf Gönder</a>
 
