--- a/index.html
+++ b/index.html
@@ -32,5 +32,13 @@
   <!-- sayfa içeriği -->
 </body>
 
-<a href="https://ngl.link/itiraf.018" target="_blank" class="itiraf-buton">İtiraf Gönder</a>
+<section class="hero">
+  <h1>Çankırı'nın Anonim İtiraf Sayfası</h1>
+  <p>İsmini gizle, içini dök!</p>
+
+  <a href="https://ngl.link/itiraf018" target="_blank" class="itiraf-buton">
+    📝 Anonim İtiraf Gönder
+  </a>
+</section>
+
 
