--- a/index.html
+++ b/index.html
@@ -1,17 +1,40 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>İtiraf0.18 - Ana Sayfa</title>
-  <link rel="stylesheet" href="style/main.css" />
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-</head>
-<body>
+  <meta charset="UTF-8">
+  <title>Çankırı İtiraf</title>
+  <link rel="stylesheet" href="style.css">
+  <style>
+    .itiraf-buton {
+      display: inline-block;
+      margin-top: 20px;
+      padding: 12px 24px;
+      background-color: #ff4081;
+      color: white;
+      text-decoration: none;
+      font-size: 16px;
+      border-radius: 6px;
+      transition: background-color 0.3s;
+    }
 
-  <header>
-    <h1>İtiraf0.18</h1>
-  </header>
+    .itiraf-buton:hover {
+      background-color: #e91e63;
+    }
+  </style>
+</head>
+<body class="dark-mode">
+
+  <h1>Hoş Geldin!</h1>
+  <p>Anonim olarak itiraf göndermek ister misin?</p>
+
+  <!-- BUTON -->
+  <a href="https://ngl.link/itiraf018" target="_blank" class="itiraf-buton">
+    📝 Anonim İtiraf Gönder
+  </a>
+
+</body>
+</html>
+
 
   <nav>
     <a href="index.html"><span class="material-icons icon">home</span>Home</a>
@@ -25,12 +48,6 @@
       <p>Merhaba ben itiraf0.18'in admini. Bu siteyi iki kişi kurduk ama sayfayı sadece ben yönetiyorum. Burada paylaşılan her şey gizli kalacaktır.</p>
     </section>
   </main>
-
-</body>
-</html>
-<body class="dark-mode">
-  <!-- sayfa içeriği -->
-</body>
 
 <section class="hero">
   <h1>Çankırı'nın Anonim İtiraf Sayfası</h1>
