--- a/index.html
+++ b/index.html
@@ -2,69 +2,11 @@
 <html lang="tr">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>itiraf0.18 - Anasayfa</title>
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <style>
-    body {
-     
-    }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Videolar - itiraf0.18</title> <!-- Sayfaya göre değişir -->
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
-  <nav>
-    <a href="index.html"><span class="material-icons icon">home</span>Home</a>
-    <a href="etkinlik.html"><span class="material-icons icon">event</span>Etkinlik</a>
-    <a href="videolar.html"><span class="material-icons icon">videocam</span>Videolar</a>
-  </nav>
-
-  <main>
-    <section class="about">
-      <h2>Hakkımızda</h2>
-      <p>Merhaba ben itiraf0.18'in admini. Bu siteyi iki kişi kurduk ama sayfayı sadece ben yönetiyorum. Burada paylaşılan her şey gizli kalacaktır.</p>
-    </section>
-
-    <section class="hero">
-      <h1>Çankırı'nın Anonim İtiraf Sayfası</h1>
-      <p>İsmini gizle, içini dök!</p>
-    </section>
-  </main>
-
-</body>
-</html>
-<!DOCTYPE html>
-<html lang="tr">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>itiraf0.18 - Anasayfa</title>
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <style>
-    body {
-    
-    }
-  </style>
-</head>
-<body>
-
-  <nav>
-    <a href="index.html"><span class="material-icons icon">home</span>Home</a>
-    <a href="etkinlik.html"><span class="material-icons icon">event</span>Etkinlik</a>
-    <a href="videolar.html"><span class="material-icons icon">videocam</span>Videolar</a>
-  </nav>
-
-  <main>
-    <section class="about">
-      <h2>Hakkımızda</h2>
-      <p>Merhaba ben itiraf0.18'in admini. Bu siteyi iki kişi kurduk ama sayfayı sadece ben yönetiyorum. Burada paylaşılan her şey gizli kalacaktır.</p>
-    </section>
-
-    <section class="hero">
-      <h1>Çankırı'nın Anonim İtiraf Sayfası</h1>
-      <p>İsmini gizle, içini dök!</p>
-    </section>
-  </main>
-
+  <!-- Sayfa içeriği buraya -->
 </body>
 </html>
