--- a/index.html
+++ b/index.html
@@ -8,5 +8,16 @@
 </head>
 <body>
   <!-- Sayfa içeriği buraya -->
+   <header>
+    <h1>İtiraf0.18</h1>
+  </header>
+
+  <nav>
+    <a href="index.html"><span class="material-icons icon">home</span>Home</a>
+    <a href="etkinlik.html" class="active"><span class="material-icons icon">event</span>Etkinlik</a>
+    <a href="videolar.html"><span class="material-icons icon">videocam</span>Videolar</a>
+    
+  </nav>
+
 </body>
 </html>
