--- a/index.html
+++ b/index.html
@@ -3,21 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Videolar - itiraf0.18</title> <!-- Sayfaya göre değişir -->
+  <title>itiraf0.18</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- Sayfa içeriği buraya -->
-   <header>
-    <h1>İtiraf0.18</h1>
-  </header>
-
-  <nav>
-    <a href="index.html"><span class="material-icons icon">home</span>Home</a>
-    <a href="etkinlik.html" class="active"><span class="material-icons icon">event</span>Etkinlik</a>
-    <a href="videolar.html"><span class="material-icons icon">videocam</span>Videolar</a>
-    
-  </nav>
-
+  <h1>itiraf0.18</h1>
+  <p id="description"></p>
 </body>
 </html>
