--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  
+   <nav>
+    <a href="index.html"><span class="material-icons icon">home</span>Home</a>
+    <a href="etkinlik.html" class="active"><span class="material-icons icon">event</span>Etkinlik</a>
+    <a href="videolar.html"><span class="material-icons icon">videocam</span>Videolar</a>
+    
+  </nav>
+  
   <h1>itiraf0.18</h1>
   <p id="description"></p>
 </body>
