--- a/index.html
+++ b/index.html
@@ -47,6 +47,16 @@
       Burada paylaşılan her şey gizli kalacaktır.
     </p>
   </main>
+  
+  <nav>
+    <a href="index.html"><span class="material-icons icon">home</span>Home</a>
+    <a href="etkinlik.html"><span class="material-icons icon">event</span>Etkinlik</a>
+    <a href="videolar.html"><span class="material-icons icon">videocam</span>Videolar</a>
+  </nav>
+
+  <script src="js/main.js" defer></script>
+</body>
+</html>
 
   <script>
     // JS kodlarını buraya yapıştırabilirsin
