--- a/etkinlik.html
+++ b/etkinlik.html
@@ -29,8 +29,10 @@
 <body class="dark-mode">
   <!-- sayfa içeriği -->
 </body>
-
-</body>
 </html>
+
+<link rel="stylesheet" href="css/main.css">
+<script src="js/main.js" defer></script>
+
 
 
