--- a/index.html
+++ b/index.html
@@ -48,11 +48,12 @@
     </p>
   </main>
   
-  <nav>
-    <a href="index.html"><span class="material-icons icon">home</span>Home</a>
-    <a href="etkinlik.html"><span class="material-icons icon">event</span>Etkinlik</a>
-    <a href="videolar.html"><span class="material-icons icon">videocam</span>Videolar</a>
-  </nav>
+<footer class="bottom-menu">
+  <a href="#home">Home</a>
+  <a href="#etkinlik">Etkinlik</a>
+  <a href="#videolar">Videolar</a>
+</footer>
+
 
   <script src="js/main.js" defer></script>
 </body>
