--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
     </p>
   </main>
   
-<footer class="bottom-menu">
-  <a href="#home">Home</a>
-  <a href="#etkinlik">Etkinlik</a>
-  <a href="#videolar">Videolar</a>
+<footer class="bottom-buttons">
+  <button onclick="location.href='#home'">Home</button>
+  <button onclick="location.href='#etkinlik'">Etkinlik</button>
+  <button onclick="location.href='#videolar'">Videolar</button>
 </footer>
 
 
