--- a/videolar.html
+++ b/videolar.html
@@ -14,9 +14,9 @@
   </header>
 
   <nav>
-    <a href="index.html"><span class="material-icons icon">home</span>Home</a>
-    <a href="etkinlik.html"><span class="material-icons icon">event</span>Etkinlik</a>
-    <a href="videolar.html" class="active"><span class="material-icons icon">videocam</span>Videolar</a>
+    <a href="index.html"><span class="material-icons icon"></span>Home</a>
+    <a href="etkinlik.html"><span class="material-icons icon"></span>Etkinlik</a>
+    <a href="videolar.html" class="active"><span class="material-icons icon"></span>Videolar</a>
     
   </nav>
 
