--- a/index.html
+++ b/index.html
@@ -49,11 +49,10 @@
   </main>
   
 <footer class="bottom-buttons">
-  <button onclick="location.href='#home'">Home</button>
-  <button onclick="location.href='#etkinlik'">Etkinlik</button>
-  <button onclick="location.href='#videolar'">Videolar</button>
+  <button onclick="location.href='index.html'">Home</button>
+  <button onclick="location.href='etkinlik.html'">Etkinlik</button>
+  <button onclick="location.href='videolar.html'">Videolar</button>
 </footer>
-
 
   <script src="js/main.js"></script>
 </body>
