--- a/index.html
+++ b/index.html
@@ -67,5 +67,13 @@
 </body>
 </html>
 
+<button onclick="window.location.href='https://ornek-link.com';">
+  Gitmek İçin Tıkla
+</button>
+
+
+
+
+
 
 
