--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 </body>
 </html>
 
-<button onclick="window.location.href='https://ornek-link.com';">
+<button onclick="window.location.href='https://ngl.link/itiraf.018';">
   Gitmek İçin Tıkla
 </button>
 
