--- a/videolar.html
+++ b/videolar.html
@@ -48,6 +48,14 @@
         <p>Katıldığınız etkinlikten kamera görüntüleri.</p>
       </div>
 
+      <!-- üçüncü Video Örneği -->
+      <div class="video-wrapper">
+        <video controls width="100%">
+          <source src="videos/ornek-video-2.mp4" type="video/mp4" />
+          Tarayıcınız video etiketini desteklemiyor.
+        </video>
+        <p>Katıldığınız etkinlikten kamera görüntüleri.</p>
+      </div>
     </section>
   </main>
 
