--- a/videolar.html
+++ b/videolar.html
@@ -33,7 +33,7 @@
 
       <div class="video-wrapper">
         <video controls width="100%">
-          <source src="videos/ornek-video.mp4" type="video/mp4" />
+          <source src="https://www.youtube.com/shorts/-G65bQUw2g4" type="video/mp4" />
           Tarayıcınız video etiketini desteklemiyor.
         </video>
         <p>Bu videoda gizli itiraflardan bir kesit izleyebilirsiniz.</p>
