--- a/videolar.html
+++ b/videolar.html
@@ -61,5 +61,16 @@
 
   <!-- JS -->
   <script src="js/main.js" defer></script>
+  
 </body>
 </html>
+<div class="video-wrapper">
+  <div class="responsive-video">
+    <iframe
+      src="https://www.youtube.com/embed/dQw4w9WgXcQ"
+      frameborder="0"
+      allowfullscreen>
+    </iframe>
+  </div>
+  <p>Video açıklaması.</p>
+</div>
