--- a/index.html
+++ b/index.html
@@ -43,8 +43,14 @@
 
   <main>
     <p class="description">
-      Merhaba ben itiraf0.18'in admini. Bu siteyi iki kişi kurduk ama sayfayı sadece ben yönetiyorum.
-      Burada paylaşılan her şey gizli kalacaktır.
+      Merhaba ben itiraf0.18'in admini ve kurusucu tamamen gizlilik esaslı bu yolda bizimle beraber yürüyen
+      herkese teşekkür ederiz. Bu siteyi iki kişi kurduk ama sayfa sadece kurucuya aittir Gizliliğinize çok önem gösteriyoruz.
+      ve bizi takip ettiğiniz için teşekkür ederizi, sitemiz şuanda beta aşamasındadır site adminimiz elinden geldiğince 
+      özen göstererek işini yapmaya çalışıyor.
+
+      NOT: yakında iletişim kısmımız açılacak gmail üzerinden bizlere e posta veya şikayet gönderebileceksiniz sadece
+      önemli gmaillere bakılacaktır.
+      
     </p>
   </main>
   
@@ -68,7 +74,7 @@
 </html>
 
 <button onclick="window.location.href='https://ngl.link/itiraf.018';">
-  Gitmek İçin Tıkla
+  Anonim İtiraf Göndermek için tıkla
 </button>
 
 
