--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <p class="description">
       Merhaba ben itiraf0.18'in admini ve kurusucu tamamen gizlilik esaslı bu yolda bizimle beraber yürüyen
       herkese teşekkür ederiz. Bu siteyi iki kişi kurduk ama sayfa sadece kurucuya aittir Gizliliğinize çok önem gösteriyoruz.
-      ve bizi takip ettiğiniz için teşekkür ederizi, sitemiz şuanda beta aşamasındadır site adminimiz elinden geldiğince 
+      ve bizi takip ettiğiniz için teşekkür ederiz, sitemiz şuanda beta aşamasındadır site adminimiz elinden geldiğince 
       özen göstererek işini yapmaya çalışıyor.
 
       NOT: yakında iletişim kısmımız açılacak gmail üzerinden bizlere e posta veya şikayet gönderebileceksiniz sadece
