--- a/videolar.html
+++ b/videolar.html
@@ -32,12 +32,19 @@
       <h2>Videolar</h2>
 
       <div class="video-wrapper">
-        <video controls width="100%">
-          <source src="https://www.youtube.com/watch?v=rGh3IwkOC8A" type="video/mp4" />
-          Tarayıcınız video etiketini desteklemiyor.
-        </video>
-        <p>Bu videoda gizli itiraflardan bir kesit izleyebilirsiniz.</p>
-      </div>
+  <div class="responsive-video">
+    <iframe 
+      src="https://www.youtube.com/embed/rGh3IwkOC8A?si=jQsFxcayu8QEqlsk" 
+      title="YouTube video player" 
+      frameborder="0" 
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+      referrerpolicy="strict-origin-when-cross-origin" 
+      allowfullscreen>
+    </iframe>
+  </div>
+  <p>Arda güler u19 takım maçı.</p>
+</div>
+
 
       <!-- İkinci Video Örneği -->
       <div class="video-wrapper">
