--- a/videolar.html
+++ b/videolar.html
@@ -74,10 +74,10 @@
 <div class="video-wrapper">
   <div class="responsive-video">
     <iframe
-      src="https://www.youtube.com/embed/dQw4w9WgXcQ"
+      src="https://www.youtube.com/watch?v=H3VhU_BRsDE"
       frameborder="0"
       allowfullscreen>
     </iframe>
   </div>
-  <p>Video açıklaması.</p>
+  <p>Sıcak türkiye gündemi.</p>
 </div>
