--- a/videolar.html
+++ b/videolar.html
@@ -34,7 +34,7 @@
       <div class="video-wrapper">
   <div class="responsive-video">
     <iframe 
-      src="https://www.youtube.com/embed/rGh3IwkOC8A?si=jQsFxcayu8QEqlsk" 
+      src="https://www.youtube.com/watch?v=6WgMWkC61Ls&t=534s" 
       title="YouTube video player" 
       frameborder="0" 
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
@@ -42,7 +42,7 @@
       allowfullscreen>
     </iframe>
   </div>
-  <p>Arda güler u19 takım maçı.</p>
+  <p>Milli takım Türkiyenin gururu.</p>
 </div>
 
 
