--- a/videolar.html
+++ b/videolar.html
@@ -31,19 +31,20 @@
     <section class="videos">
       <h2>Videolar</h2>
 
-      <div class="video-wrapper">
+     <div class="video-wrapper">
   <div class="responsive-video">
     <iframe 
-      src="https://www.youtube.com/watch?v=6WgMWkC61Ls&t=534s" 
-      title="YouTube video player" 
-      frameborder="0" 
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+      src="https://www.youtube.com/embed/6WgMWkC61Ls?si=NEGvb19LVKUwt_ta" 
+      title="YouTube video player"
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
       referrerpolicy="strict-origin-when-cross-origin" 
       allowfullscreen>
     </iframe>
   </div>
-  <p>Milli takım Türkiyenin gururu.</p>
+  <p>TÜRKİYE Milli takım mücadele yolu.</p>
 </div>
+
 
 
       <!-- İkinci Video Örneği -->
