--- a/videolar.html
+++ b/videolar.html
@@ -45,40 +45,22 @@
   <p>TÜRKİYE Milli takım mücadele yolu.</p>
 </div>
 
+<div class="video-wrapper">
+  <div class="responsive-video">
+    <iframe 
+      src="https://www.youtube.com/embed/H3VhU_BRsDE?si=JRWUx7OynM3IDiEK" 
+      title="YouTube video player" 
+      frameborder="0" 
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+      referrerpolicy="strict-origin-when-cross-origin" 
+      allowfullscreen>
+    </iframe>
+  </div>
+  <p>Türkiye gündemi günlük olarak güncellenecektir.</p>
+</div>
 
-
-      <!-- İkinci Video Örneği -->
-      <div class="video-wrapper">
-        <video controls width="100%">
-          <source src="videos/ornek-video-2.mp4" type="video/mp4" />
-          Tarayıcınız video etiketini desteklemiyor.
-        </video>
-        <p>Katıldığınız etkinlikten kamera görüntüleri.</p>
-      </div>
-
-      <!-- üçüncü Video Örneği -->
-      <div class="video-wrapper">
-        <video controls width="100%">
-          <source src="videos/ornek-video-2.mp4" type="video/mp4" />
-          Tarayıcınız video etiketini desteklemiyor.
-        </video>
-        <p>Katıldığınız etkinlikten kamera görüntüleri.</p>
-      </div>
-    </section>
-  </main>
 
   <!-- JS -->
   <script src="js/main.js" defer></script>
   
-</body>
-</html>
-<div class="video-wrapper">
-  <div class="responsive-video">
-    <iframe
-      src="https://www.youtube.com/watch?v=H3VhU_BRsDE"
-      frameborder="0"
-      allowfullscreen>
-    </iframe>
-  </div>
-  <p>Sıcak türkiye gündemi.</p>
-</div>
+
