--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   </main>
   
 <footer class="bottom-buttons">
-  <button onclick="location.href='index.html'">Home</button>
+  <button onclick="location.href='index.html'">Anasayfa</button>
   <button onclick="location.href='etkinlik.html'">Etkinlik</button>
   <button onclick="location.href='videolar.html'">Videolar</button>
 </footer>
