--- a/etkinlik.html
+++ b/etkinlik.html
@@ -14,7 +14,7 @@
   </header>
 
   <nav>
-    <a href="index.html"><span class="material-icons icon"></span>Home</a>
+    <a href="index.html"><span class="material-icons icon"></span>Anasayfa</a>
     <a href="etkinlik.html" class="active"><span class="material-icons icon"></span>Etkinlik</a>
     <a href="videolar.html"><span class="material-icons icon"></span>Videolar</a>
     
