--- a/videolar.html
+++ b/videolar.html
@@ -21,7 +21,7 @@
 
   <!-- Navigasyon Menüsü -->
   <nav>
-    <a href="index.html"><span class="material-icons icon">home</span> Home</a>
+    <a href="index.html"><span class="material-icons icon">home</span> Anasayfa</a>
     <a href="etkinlik.html"><span class="material-icons icon">event</span> Etkinlik</a>
     <a href="videolar.html" class="active"><span class="material-icons icon">videocam</span> Videolar</a>
   </nav>
