--- a/index.html
+++ b/index.html
@@ -4,37 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>itiraf0.18 - Ana Sayfa</title>
-
-  <style>
-    /* CSS kodlarını buraya yapıştır */
-    body {
-      margin: 0;
-      background-color: #121212;
-      color: #fff;
-      font-family: Arial, sans-serif;
-      height: 100vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
-      align-items: center;
-      padding-top: 60px;
-      text-align: center;
-    }
-
-    header h1 {
-      font-size: 3rem;
-      color: #ff4081;
-      margin: 0;
-      margin-bottom: 20px;
-    }
-
-    .description {
-      max-width: 600px;
-      font-size: 1.2rem;
-      color: #e0e0e0;
-      line-height: 1.6;
-    }
-  </style>
+  <link rel="stylesheet" href="style/main.css" />
 </head>
 <body>
   <header>
@@ -43,43 +13,25 @@
 
   <main>
     <p class="description">
-      Merhaba ben itiraf0.18'in admini ve kurusucu tamamen gizlilik esaslı bu yolda bizimle beraber yürüyen
-      herkese teşekkür ederiz. Bu siteyi iki kişi kurduk ama sayfa sadece kurucuya aittir Gizliliğinize çok önem gösteriyoruz.
-      ve bizi takip ettiğiniz için teşekkür ederiz, sitemiz şuanda beta aşamasındadır site adminimiz elinden geldiğince 
-      özen göstererek işini yapmaya çalışıyor.
-
-      NOT: yakında iletişim kısmımız açılacak gmail üzerinden bizlere e posta veya şikayet gönderebileceksiniz sadece
-      önemli gmaillere bakılacaktır.
-      
+      Merhaba ben itiraf0.18'in admini ve kurucusuyum. Tamamen gizlilik esaslı bu yolda bizimle yürüyen herkese teşekkür ederiz.
+      Site şu anda beta aşamasında ve adminimiz elinden gelenin en iyisini yapmaya çalışıyor.
+      <br><br>
+      <strong>Not:</strong> Yakında iletişim kısmımız açılacak. Gmail üzerinden önemli e-postalara yanıt verilecek.
     </p>
+
+    <div class="anonim-button">
+      <button onclick="window.location.href='https://ngl.link/itiraf.018';">
+        Anonim İtiraf Göndermek İçin Tıkla
+      </button>
+    </div>
   </main>
-  
-<footer class="bottom-buttons">
-  <button onclick="location.href='index.html'">Anasayfa</button>
-  <button onclick="location.href='etkinlik.html'">Etkinlik</button>
-  <button onclick="location.href='videolar.html'">Videolar</button>
-</footer>
+
+  <footer class="bottom-buttons">
+    <button onclick="location.href='index.html'">Anasayfa</button>
+    <button onclick="location.href='etkinlik.html'">Etkinlik</button>
+    <button onclick="location.href='videolar.html'">Videolar</button>
+  </footer>
 
   <script src="js/main.js"></script>
 </body>
 </html>
-
-  <script>
-    // JS kodlarını buraya yapıştırabilirsin
-    document.addEventListener("DOMContentLoaded", () => {
-      console.log("index.html içindeki script çalışıyor.");
-    });
-  </script>
-</body>
-</html>
-
-<button onclick="window.location.href='https://ngl.link/itiraf.018';">
-  Anonim İtiraf Göndermek için tıkla
-</button>
-
-
-
-
-
-
-
