--- a/videolar.html
+++ b/videolar.html
@@ -20,11 +20,11 @@
   </header>
 
   <!-- Navigasyon Menüsü -->
-  <nav>
-    <a href="index.html"><span class="material-icons icon">home</span> Anasayfa</a>
-    <a href="etkinlik.html"><span class="material-icons icon">event</span> Etkinlik</a>
-    <a href="videolar.html" class="active"><span class="material-icons icon">videocam</span> Videolar</a>
-  </nav>
+ <footer class="bottom-buttons">
+    <button onclick="location.href='index.html'">Anasayfa</button>
+    <button onclick="location.href='etkinlik.html'">Etkinlik</button>
+    <button onclick="location.href='videolar.html'">Videolar</button>
+  </footer>
 
   <!-- Ana İçerik -->
   <main>
