--- a/etkinlik.html
+++ b/etkinlik.html
@@ -13,12 +13,11 @@
     <h1>İtiraf0.18</h1>
   </header>
 
-  <nav>
-    <a href="index.html"><span class="material-icons icon"></span>Anasayfa</a>
-    <a href="etkinlik.html" class="active"><span class="material-icons icon"></span>Etkinlik</a>
-    <a href="videolar.html"><span class="material-icons icon"></span>Videolar</a>
-    
-  </nav>
+ <footer class="bottom-buttons">
+    <button onclick="location.href='index.html'">Anasayfa</button>
+    <button onclick="location.href='etkinlik.html'">Etkinlik</button>
+    <button onclick="location.href='videolar.html'">Videolar</button>
+  </footer>
 
   <main>
     <section class="live-event">
