--- a/etkinlik.html
+++ b/etkinlik.html
@@ -32,4 +32,4 @@
     <button onclick="location.href='etkinlik.html'">Etkinlik</button>
     <button onclick="location.href='videolar.html'">Videolar</button>
   </footer>
-
+<script src="js/main.js"></script>
