--- a/videolar.html
+++ b/videolar.html
@@ -5,6 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>İtiraf0.18 - Videolar</title>
   
+   <!-- Google Icons -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="style/main.css" />
+</head>
+
+  
 <body class="dark-mode">
   
   <!-- Ana İçerik -->
