--- a/etkinlik.html
+++ b/etkinlik.html
@@ -18,7 +18,7 @@
     <!-- Etkinlik Ana Bölüm -->
     <section class="live-event">
       <h2>Canlı Etkinlikler</h2>
-      <p>Siz seçin biz yapalım. Eğlenmeye hazır mıyız ?.</p>
+      <p>Siz seçin biz yapalım. Eğlenmeye hazır mıyız.</p>
     </section>
 
     <!-- Fotoğraf Savaşları Bölümü -->
