--- a/etkinlik.html
+++ b/etkinlik.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>İtiraf0.18 - Canlı Etkinlikler</title>
+  <title>İtiraf0.18 - Etkinlik yapmak istediğin tarihi seç</title>
   <link rel="stylesheet" href="style/main.css" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 </head>
@@ -24,7 +24,7 @@
     <!-- Fotoğraf Savaşları Bölümü -->
     <section class="fotograf-savaslari">
       <h2>📸 Fotoğraf Savaşları</h2>
-      <p>Etkinliğe katılım tarihini seç:</p>
+      <p>Etkinliği yapmak istediğin tarihi seç:</p>
 
       <form id="etkinlikTarihiForm">
         <label for="tarih">Tarih Seç:</label>
