--- a/etkinlik.html
+++ b/etkinlik.html
@@ -33,9 +33,9 @@
   </main>
 
   <footer class="bottom-buttons">
-    <button data-target="anasayfa">Anasayfa</button>
-    <button data-target="etkinlik">Etkinlik</button>
-    <button data-target="videolar">Videolar</button>
+    <button id="anasayfaBtn">Anasayfa</button>
+    <button id="etkinlikBtn">Etkinlik</button>
+    <button id="videolarBtn">Videolar</button>
   </footer>
 
   <script src="js/main.js" defer></script>
